--- a/webblog/views/account/posts/regist-form.ejs
+++ b/webblog/views/account/posts/regist-form.ejs
@@ -17,37 +17,37 @@
         <h1>新規記事登録</h1>
       </div>
       <form method="POST" action="/account/posts/regist/confirm">
-        <div class="form-group row">
+        <div class="row mb-3">
           <label for="url" class="col-sm-2 col-form-label">URL:</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="url" name="url" />
           </div>
         </div>
-        <div class="form-group row">
+        <div class="row mb-3">
           <label for="title" class="col-sm-2 col-form-label">タイトル:</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="title" name="title" />
           </div>
         </div>
-        <div class="form-group row">
+        <div class="row mb-3">
           <label for="content" class="col-sm-2 col-form-label">本文:</label>
           <div class="col-sm-10">
-            <textarea type="text" class="form-control" id="content" name="content" rows="6"></textarea>
+            <textarea type="text" class="form-control" id="content" name="content" row mb-3s="6"></textarea>
           </div>
         </div>
-        <div class="form-group row">
+        <div class="row mb-3">
           <label for="keywords" class="col-sm-2 col-form-label">キーワード:</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="keywords" name="keywords" />
           </div>
         </div>
-        <div class="form-group row">
+        <div class="row mb-3">
           <label for="authors" class="col-sm-2 col-form-label">著者:</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="authors" name="authors" />
           </div>
         </div>
-        <div class="form-group row">
+        <div class="row mb-3">
           <div class="col-sm-2"></div>
           <div class="col-sm-10">
             <input type="submit" class="btn btn-primary" value="確認" />
